--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
         <div class="container">
             <div class="wrapper">
                 <div class="box1">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <a href=""></a>
+                    <img src="images/icon-sedans.svg" alt="sedans">
+                    <h2>SEDANS</h2>
+                    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                        or on your next road trip.</p>
+                    <a href="#">Learn More</a>
                 </div>
                 <div class="box2">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <a href=""></a>
+                    <img src="images/icon-suvs.svg" alt="SUVs">
+                    <h2>SUVs</h2>
+                    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                        and off-road adventures.</p>
+                    <a href="#">Learn More</a>
                 </div>
                 <div class="box3">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <a href=""></a>
+                    <img src="images/icon-luxury.svg" alt="Luxury">
+                    <h2>LUXURY</h2>
+                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                        rental and arrive in style.</p>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
         </div>
