--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device --> <!--Significa que o site vai ser exibido em tela cheia, independente do dispositivo em que ele for -->
+    <!-- displays site properly based on user's device -->
+    <!--Significa que o site vai ser exibido em tela cheia, independente do dispositivo em que ele for -->
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="style/style.css">
     <title>Frontend Mentor | 3 Column preview card component</title>
@@ -12,26 +13,31 @@
 
 <body>
     <main>
-        <div class="container">
+        <div class="container"> <!--O container centraliza o conteúdo deixando espaços nas laterais.-->
             <div class="wrapper">
+                <!--Uma wrapper class é uma classe que "embrulha", envolve, outros objetos afim de adicionar algum atributo ao conjunto ou melhor organizar seu código.-->
+
                 <div class="box1">
+                    <!--A div com a class box, vai agrupar outros elementos dentro, como se fosse uma caixa.-->
+
                     <img src="images/icon-sedans.svg" alt="sedans">
                     <h2>SEDANS</h2>
-                    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
                         or on your next road trip.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div class="box2">
                     <img src="images/icon-suvs.svg" alt="SUVs">
                     <h2>SUVs</h2>
-                    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+                        vacation
                         and off-road adventures.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div class="box3">
                     <img src="images/icon-luxury.svg" alt="Luxury">
                     <h2>LUXURY</h2>
-                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
                         rental and arrive in style.</p>
                     <a href="#">Learn More</a>
                 </div>
