--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!--Significa que o site vai ser exibido em tela cheia, independente do dispositivo em que ele for -->
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
     <title>Frontend Mentor | 3 Column preview card component</title>
 </head>
 
